tests/reference/asr-end_sub_name-b8abc97.stderr
syntax error: End subroutine name does not match subroutine name
 --> tests/errors/end_sub_name.f90:1:1 - 7:22
  |
1 |    subroutine swap(x, y)
  |    ^^^^^^^^^^^^^^^^^^^^^...
...
  |
7 |    end subroutine reverse
  | ...^^^^^^^^^^^^^^^^^^^^^^ 
